--- a/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
+++ b/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
@@ -47,17 +47,6 @@
   color: #7D8086;
 }
 
-.header h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  color: #2C323C;
-}
-
-.header p {
-  font-size: 1.2rem;
-  color: #7D8086;
-}
-
 /* Node Styles */
 .org-node {
   background: white;
@@ -159,11 +148,10 @@
 
 /* Save Button */
 .save-button {
-  position: sticky;
-  bottom: 20px;
   display: flex;
   justify-content: flex-end;
   margin-top: 20px;
+  padding-right: 30px;
 }
 
 .save-button button {
