--- a/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
+++ b/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
@@ -11,6 +11,13 @@
   position: relative;
 }
 
+.org-row {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
 .chart-wrapper {
   background: radial-gradient(white 1px, transparent 1px);
   background-size: 10px 10px;
