--- a/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
+++ b/resources/js/Pages/Dashboard/Configuration/OrganizationalChart/chart.css
@@ -75,17 +75,20 @@
 /* Three Dots (Menu Icon) Aligned to Left */
 .menu-icon {
   position: absolute;
-  top: 5px;
-  right: -70px; /* Moved to extreme left */
+  flex-shrink: 0;
+  top: -2px;
+  right: -65px; /* Moved to extreme left */
   z-index: 10;
 }
 
 /* Node Header */
 .node-header {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 3px;
+  justify-content: space-between; /* Ensures spacing is only between elements */
+  width: 10%;
+  padding: 0px 0px; /* Reduce padding for less gap */
+  gap: 5px; /* Adjust this value to control spacing */
 }
 
 /* Avatar */
